Design Fixing Update